--- a/ImageSlide/src/css/style.css
+++ b/ImageSlide/src/css/style.css
@@ -1,10 +1,11 @@
+@import url('~@fortawesome/fontawesome-free/css/all.min.css');
+
 * {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-/* ! */
 .slider-wrap {
   width: 1000px;
   height: 400px;
@@ -12,19 +13,20 @@
   position: relative;
   overflow: hidden;
 }
-/* ! */
+
 .slider-wrap ul.slider {
-  width: 8000px;
+  width: 100%;
   height: 100%;
   position: absolute;
+  left: 0px;
 }
-/* ! */
+
 .slider-wrap ul.slider li {
   float: left;
   width: 1000px;
   height: 400px;
 }
-/* ! */
+
 .btn {
   position: absolute;
   width: 50px;
@@ -43,23 +45,23 @@
 .btn:hover {
   background: rgba(0, 0, 0, 0.3);
 }
-/* ! */
+
 .next {
   right: -50px;
   border-radius: 7px 0px 0px 7px;
   color: white;
 }
-/* ! */
+
 .previous {
   left: -50px;
   border-radius: 0px 7px 7px 7px;
   color: white;
 }
-/* ! */
+
 .slider-wrap:hover .next {
   right: 0px;
 }
-/* ! */
+
 .slider-wrap:hover .previous {
   left: 0px;
 }
