--- a/BMICalculator/main.css
+++ b/BMICalculator/main.css
@@ -1,3 +1,12 @@
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
 .btn {
   width: 148px;
   height: 48px;
